--- a/cloudlab_/10-01-24_docker_/wsgiWebSocket/index.html
+++ b/cloudlab_/10-01-24_docker_/wsgiWebSocket/index.html
@@ -34,6 +34,8 @@
 
       let websocket = new WebSocket("ws://10.0.0.6:9970/dados");
 
+      var switches = [];
+
       // pegar a mensagem como um arraybuffer - https://bun.sh/guides/binary/arraybuffer-to-string
       websocket.binaryType = "arraybuffer";
 
@@ -60,6 +62,35 @@
         document.getElementById('controller_stats').innerHTML = `<h3>dados recebidos: ${JSON.stringify(dados_json.switches[0].nome)}</h3>`
         
       };
+
+
+      // quero armazenar os switches, as portas dos switches, os links de cada porta, a largura de banda de cada porta, regras de QoS de cada porta
+      // mostrar a topologia
+      // possuir um botão para obter estatística de um fluxo específico.  
+      class Switch{
+        constructor(id, qtdPortas){
+          this.id = id;
+          this.qtdPortas = qtdPortas;
+        }
+      }
+
+      class Porta{
+        constructor(id){
+          this.id = id;
+        }
+      }
+
+      class Link{
+        constructor(SwitchA, PortaA, SwitchB, PortaB, direcao, banda){
+          this.SwitchA = SwitchA;
+          this.SwitchB = SwitchB;
+          this.PortaA = PortaA;
+          this.PortaB = PortaB;
+          this.direcao = direcao;
+          this.banda = banda;
+
+        }
+      }
 
     </script>
 
